<resources>
    <string name="app_name">Moon Mystics</string>
    <string name="title_home">Remote View</string>
    <string name="title_dashboard">Upa-Yoga</string>
    <string name="title_notifications">Info</string>
    <string name="mostrar">Show</string>
    <string name="tentarnovamente">Try again</string>
    <string name="cancelar">Cancel</string>
    <string name="doar">Donate</string>
    <string name="obrigado">Thanks</string>
    <string name="whatis">\?</string>
    <string name="amor">Love</string>
    <string name="explora_o_interior">Inner exploration</string>
    <string name="felicidade">Joy</string>
    <string name="paz">Peace</string>
    <string name="bem_estar">Wellbeing</string>
    <string name="sucesso">Success</string>
    <string name="sa_de">Health</string>
    <string name="document_rio_sobre_upa_yoga">Upa-Yoga Documentary</string>
    <string name="exercicios_seguidos">Full Exercises</string>
    <string name="samadhi">Samadhi</string>
    <string name="sadhguru_isha_foundation">SadhGuru Isha Foundation</string>
    <string name="flower_of_life">Flower of Life</string>
    <string name="fibonacci">Fibonacci</string>
    <string name="remote_view">Remote View</string>
    <string name="meditar">Meditate</string>
    <string name="what_is_meditation">What is Meditation</string>
    <string name="sitting_meditation">Sitting Meditation</string>
    <string name="walking_meditation">Walking Meditation</string>
    <string name="fundamentals_of_meditation_practice">Fundamentals of Meditation Practice</string>
    <string name="mindful_prostration">Mindful Prostration</string>
    <string name="meditation_practice_and_daily_life">Meditation Practice and Daily Life</string>
    <string name="varias_musicas_para_meditar">Various Binaural songs to meditate</string>
    <string name="curso_no_youtube_de_medita_ao">Starting meditation course</string>
    <string name="_5_kinds_of_conscience">5 kinds of conscience</string>
    <string name="secrets_of_success">Secrets of success</string>
    <string name="the_most_important_principles_of_life">The Most Important Principles of Life</string>
    <string name="health">Health</string>
    <string name="_16_points">16 points</string>
    <string name="ok">OK</string>
</resources>
